Customed scrollbar, fix a refer in the social section.

--- a/src/blocks/custom/custom.scss
+++ b/src/blocks/custom/custom.scss
@@ -86,6 +86,21 @@ a {
 .skills, .hobbies, .connect {
   max-width: 1024px;
 }
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  background-color: $ghostblack;
+}
 /*******
 
  END Custom
